src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_10.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/414/9520123456788\")"
---
Ok(
    (
        "",
        Gln {
            gln: "9520123456788",
            glnx: None,
        },
    ),
)
