src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_11.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/8004/9520614141234567?01=09520123456788\")"
---
Ok(
    (
        "?01=09520123456788",
        Giai(
            "9520614141234567",
        ),
    ),
)
