src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_2.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/01/09520123456788/22/2A\")"
---
Ok(
    (
        "",
        Gtin {
            gtin: "09520123456788",
            cpv: Some(
                "2A",
            ),
            lot: None,
            ser: None,
        },
    ),
)
