src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_3.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/01/09520123456788/10/ABC123\")"
---
Ok(
    (
        "",
        Gtin {
            gtin: "09520123456788",
            cpv: None,
            lot: Some(
                "ABC123",
            ),
            ser: None,
        },
    ),
)
