src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_7.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/01/09520123456788?3103=000195&3922=0299&17=201225\")"
---
Ok(
    (
        "?3103=000195&3922=0299&17=201225",
        Gtin {
            gtin: "09520123456788",
            cpv: None,
            lot: None,
            ser: None,
        },
    ),
)
