src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_accept_spec_example_5_8.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/00/195201234567891232\")"
---
Ok(
    (
        "",
        Sscc(
            "195201234567891232",
        ),
    ),
)
