src/parser/snapshots/digital_link_rs__parser__gs1path__tests__should_not_accept_root_path.snap
---
source: src/parser/gs1path.rs
expression: "gs1path(\"/\")"
---
Err(
    Error(
        Error {
            input: "",
            code: Tag,
        },
    ),
)
